--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 22:05:06 2018</p>
+         Last Run: Thu Nov 22 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>6</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>80</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>69</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>4</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>5</td>
                         <td>70</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SSE</td>
-                        <td>57</td>
+                        <td>10</td>
+                        <td>S</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>47</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -104,7 +104,7 @@
                "data":[
                  "-5",
                  "-4",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -117,7 +117,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -176,9 +176,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "6",
                  "5",
                  "5",
-                 "4",
                  "5"
                ]
              },
@@ -188,8 +188,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "72",
+                 "79",
+                 "73",
                  "70",
                  "71"
                ]
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "69",
-                 "57",
-                 "47"
+                 "78",
+                 "66",
+                 "53",
+                 "43"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 22:05:06 2018</p>
+         Last Run: Thu Nov 22 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,38 +265,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>56</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>36</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
                         <td>56</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>60</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>2</td>
-                        <td>55</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>61</td>
+                        <td>SW</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "0",
                  "0"
                ]
@@ -335,7 +335,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "2",
                  "2"
                ]
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "59",
-                 "56",
-                 "55"
+                 "57",
+                 "56"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "60",
-                 "61"
+                 "35",
+                 "36",
+                 "37"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 22:05:06 2018</p>
+         Last Run: Thu Nov 22 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -507,7 +507,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -622,7 +622,7 @@
                "data":[
                  "83",
                  "86",
-                 "88"
+                 "87"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 22:05:06 2018</p>
+         Last Run: Thu Nov 22 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>68</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>90</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -837,7 +837,7 @@
                "data":[
                  "88",
                  "89",
-                 "90"
+                 "89"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "66",
                  "67",
-                 "68",
-                 "69"
+                 "68"
                ]
              }
            ]
