--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 23:05:06 2018</p>
+         Last Run: Fri Nov 23 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -31,22 +31,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
-                        <td>6</td>
-                        <td>79</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
@@ -55,13 +55,13 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>S</td>
+                        <td>8</td>
+                        <td>SSE</td>
                         <td>53</td>
                      </tr>
                      <tr>
@@ -70,7 +70,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -102,9 +102,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-6",
                  "-5",
                  "-4",
-                 "-3",
                  "-4"
                ]
              },
@@ -115,9 +115,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-3",
                  "-2",
                  "-1",
-                 "0",
                  "-1"
                ]
              }
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "5",
                  "5",
                  "5"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "73",
-                 "70",
-                 "71"
+                 "82",
+                 "75",
+                 "71",
+                 "72"
                ]
              },
              {
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "66",
                  "53",
                  "43"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 23:05:06 2018</p>
+         Last Run: Fri Nov 23 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -265,20 +265,20 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>-2</td>
                         <td>2</td>
                         <td>59</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>W</td>
+                        <td>6</td>
+                        <td>WSW</td>
                         <td>35</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>57</td>
                         <td>1</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,7 +324,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-2",
                  "0"
                ]
              },
@@ -335,8 +335,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "0",
                  "1",
-                 "2",
                  "2"
                ]
              }
@@ -407,7 +407,7 @@
                "data":[
                  "59",
                  "57",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -418,7 +418,7 @@
                "data":[
                  "35",
                  "36",
-                 "37"
+                 "38"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 23:05:06 2018</p>
+         Last Run: Fri Nov 23 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>83</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -492,26 +492,26 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>86</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>10</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>77</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>7</td>
-                        <td>87</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>84</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,8 +539,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
-                 "-7"
+                 "-6",
+                 "-6"
                ]
              },
              {
@@ -551,8 +551,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-3",
-                 "-3"
+                 "-2",
+                 "-2"
                ]
              }
            ]
@@ -610,8 +610,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "5",
-                 "7"
+                 "10",
+                 "6"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "86",
-                 "87"
+                 "78",
+                 "81",
+                 "86"
                ]
              },
              {
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "65",
-                 "77",
-                 "84"
+                 "76",
+                 "83"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 23:05:06 2018</p>
+         Last Run: Fri Nov 23 00:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>8</td>
-                        <td>88</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>7</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>66</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>8</td>
-                        <td>89</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>7</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>67</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-4</td>
                         <td>7</td>
-                        <td>89</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>68</td>
+                        <td>WSW</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
-                 "-6",
-                 "-6"
+                 "-4",
+                 "-5",
+                 "-4"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-3",
-                 "-3"
+                 "-1",
+                 "-2",
+                 "-2"
                ]
              }
            ]
@@ -824,8 +824,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "8",
+                 "7",
+                 "7",
                  "7"
                ]
              },
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "89",
-                 "89"
+                 "82",
+                 "84",
+                 "85"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "67",
-                 "68"
+                 "58",
+                 "56",
+                 "54"
                ]
              }
            ]
